@@ -1,5 +1,6 @@
 CHANGES IN VERSION 1.3.2
 ------------------------
+ o update codes of plot functions accompaning with ggplot2 (version 0.9.2) <2012-09-06, Thu> 
  o update cnetplot corresponding to igraph version 0.6 <2012-07-11, Wed>
  o parameter showCategory now support term ID vector <2012-07-11, Wed>
  o import termSim and combineScores from GOSemSim. <2012-06,14, Thu>
